# milestone_timer

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
examples/: example.py
milestone_timer/: __init__.py  timer.py
